--- a/InsuranceCalculator.Web/angular.json
+++ b/InsuranceCalculator.Web/angular.json
@@ -13,6 +13,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "port": 10000,
+            "host": "0.0.0.0",
             "outputPath": "dist/insurance-calculator.web",
             "index": "src/index.html",
             "browser": "src/main.ts",
