--- a/InsuranceCalculator.Web/angular.json
+++ b/InsuranceCalculator.Web/angular.json
@@ -12,7 +12,8 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:application",
-          "options": {                        
+          "options": {             
+            "allowedHosts": ["insurancecalculatordeploy.onrender.com"],           
             "outputPath": "dist/insurance-calculator.web",
             "index": "src/index.html",
             "browser": "src/main.ts",
