--- a/InsuranceCalculator.Web/package.json
+++ b/InsuranceCalculator.Web/package.json
@@ -2,8 +2,8 @@
   "name": "insurance-calculator.web",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve --host=0.0.0.0 --port=$PORT",
+    "ng": "ng",    
+    "start": "ng serve --host=0.0.0.0 --port=$PORT --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
