--- a/InsuranceCalculator.Web/angular.json
+++ b/InsuranceCalculator.Web/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {                        
-            "outputPath": "dist/insurance-calculator.web/browser-",
+            "outputPath": "dist/insurance-calculator.web/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
