--- a/InsuranceCalculator.Web/netlify.toml
+++ b/InsuranceCalculator.Web/netlify.toml
@@ -1,3 +1,3 @@
 [build]
   command = "ng build --configuration=production"
-  publish = "dist/insurance-calculator.web/Gaby"
+  publish = "dist/insurance-calculator.web/browser"
